# AxiomNexus

./: .gitignore  AGENTS.md  AxiomNexus_one_page_system_explanation.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  guide.md  process-compose.yaml  triad.toml
.agents/: AGENTS.md
.triad/: evidence.ndjson
crates/: README.md
crates/axiomnexus-governance/: Cargo.toml
crates/axiomnexus-governance/src/: bootstrap.rs  lib.rs  main.rs  profile.rs  render.rs
crates/axiomsync-cli/: Cargo.toml  README.md
crates/axiomsync-cli/src/cli/: mod.rs  tests.rs
crates/axiomsync-cli/src/commands/: handlers.rs  mod.rs  support.rs  tests.rs  validation.rs
crates/axiomsync-cli/tests/: process_contract.rs
docs/: 00-DESIGN-REVIEW.md  00-index.md  01-FINAL-TARGET.md  01-system-design.md  02-BLUEPRINT.md  02-storage-review.md  03-DOMAIN-AND-INVARIANTS.md  03-surrealdb-redesign.md  04-API-SURFACE.md  05-QUALITY-GATES.md  05-target-architecture.md  07-triad-governance-integration-plan.md  API_CONTRACT.md  ARCHITECTURE.md  README.md  REFERENCES.md  RELEASE-NOTES-TEMPLATE.md
plans/: 07_IMPLEMENTATION_PLAN.md  COMMIT-PLAN.md  GUIDE.md  HTTP-SURREAL-CHECKLIST.md  IMPLEMENTATION-PLAN.md  README.md  RELEASE-READINESS.md  ROADMAP.md  STABLE-BACKLOG.md  TASKS.md  final-simplicity-implementation-plan.md  final-simplicity-tasks.md
samples/: company-rust-contract.example.json  execute-turn-output.schema.json  transition-intent.schema.json
scripts/: check_prohibited_tokens.sh  export-release-evidence.sh  mirror_notice_gate.sh  mirror_notice_router.sh  mirror_notice_router_smoke.sh  perf_regression_gate.sh  quality_gates.sh  release_pack_strict_gate.sh  smoke-runtime.sh  verify-release.sh  verify-runtime.sh
site/: index.html
(+123 files in other folders)
