[package]
name = "axiomnexus-governance"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axiomnexus-governance"
path = "src/main.rs"

[dependencies]
triad-core = { path = "../../../triad/crates/triad-core" }
triad-config = { path = "../../../triad/crates/triad-config" }
triad-runtime = { path = "../../../triad/crates/triad-runtime" }
